# ARN.py

./: .gitignore  README.md  pyproject.toml  test.py
arnstruct/Gui/: exemple1.py
arnstruct/core/: datastructures.py  dynamicprog.py  parentheses.py  sequence.py  structure.py
arnstruct/parsing/: parseRfam.py
data/: RF02913.stockholm.txt
tests/: test_arnstruct.py
