[tool.poetry]
name = "ARNstruct"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
biopython = "^1.78"
PySimpleGUI = "^4.39.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.7.4"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
